# MinRuby

./: README.md
exercise/: case_test.rb  endwhile_test.rb  interp.rb  interp2.rb  interp_term6.rb  plus_count_test.rb  term2.rb  term3.rb  term5.rb  term6.rb
haskell/minruby/: minruby.cabal
haskell/minruby/app/: Interp.hs
haskell/minruby/example/: eg1.rb  eg2.rb  eg3.rb
haskell/minruby/src/: MinRuby.hs
