name:                minruby
version:             0.1.0.0
synopsis:            Parser for MinRuby
description:         Please see README.md
homepage:            https://github.com/matsubara0507/MinRuby/haskell/minruby#readme
license:             MIT
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2016 MATSUBARA Nobutda
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MinRuby
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
  default-language:    Haskell2010


executable interp
  hs-source-dirs:      app
  main-is:             Interp.hs
  build-depends:       base >= 4.7 && < 5
                     , minruby
                     , containers
                     , hashmap
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsubara0507/MinRuby/haskell/minruby
